// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders a 'short' variant select input with options 1`] = `
.emotion-0 {
  width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  color: #fff;
  background-color: transparent;
  border: 1px solid #415662;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 38px;
  background-position: right 0.625rem center;
  background-repeat: no-repeat;
  background-size: 0.625rem;
  color: #8697a2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  color: white;
  background-size: auto 0.625rem;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 13 20' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M11.73 13L13 14.146 6.5 20 0 14.148 1.271 13l5.23 4.712L11.729 13zm0-6L6.5 2.288 1.272 7 0 5.852 6.5 0 13 5.854 11.73 7z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: #304854;
}

.emotion-0:disabled,
.emotion-0:disabled + label {
  color: #304854;
}

.emotion-0:hover,
.emotion-0:focus {
  cursor: pointer;
}

.emotion-0:disabled {
  cursor: not-allowed;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23304854' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

@media (min-width:31.25em) {
  .emotion-0 {
    width: auto;
  }
}

.emotion-0:disabled {
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 13 20' xmlns='http://www.w3.org/2000/svg' color='%23304854' class='css-uk6cul'%3e%3cpath d='M11.73 13L13 14.146 6.5 20 0 14.148 1.271 13l5.23 4.712L11.729 13zm0-6L6.5 2.288 1.272 7 0 5.852 6.5 0 13 5.854 11.73 7z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

<select
  className="emotion-0"
>
  <option
    value="eur"
  >
    EUR
  </option>
  <option
    value="usd"
  >
    USD
  </option>
  <option
    value="gbp"
  >
    GBP
  </option>
</select>
`;

exports[`Select renders a select input with options 1`] = `
.emotion-0 {
  width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  color: #fff;
  background-color: transparent;
  border: 1px solid #415662;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 38px;
  background-position: right 0.625rem center;
  background-repeat: no-repeat;
  background-size: 0.625rem;
  color: #8697a2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: #304854;
}

.emotion-0:disabled,
.emotion-0:disabled + label {
  color: #304854;
}

.emotion-0:hover,
.emotion-0:focus {
  cursor: pointer;
}

.emotion-0:disabled {
  cursor: not-allowed;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23304854' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

@media (min-width:31.25em) {
  .emotion-0 {
    width: auto;
  }
}

<select
  className="emotion-0"
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="never-gonna"
  >
    Never gonna
  </option>
  <option
    value="give-you-up"
  >
    give you up
  </option>
  <option
    value="let-you-down"
  >
    let you down
  </option>
</select>
`;

exports[`Select renders as disabled for 'short' select input 1`] = `
.emotion-0 {
  width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  color: #fff;
  background-color: transparent;
  border: 1px solid #415662;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 38px;
  background-position: right 0.625rem center;
  background-repeat: no-repeat;
  background-size: 0.625rem;
  color: #8697a2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  color: white;
  background-size: auto 0.625rem;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 13 20' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M11.73 13L13 14.146 6.5 20 0 14.148 1.271 13l5.23 4.712L11.729 13zm0-6L6.5 2.288 1.272 7 0 5.852 6.5 0 13 5.854 11.73 7z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: #304854;
}

.emotion-0:disabled,
.emotion-0:disabled + label {
  color: #304854;
}

.emotion-0:hover,
.emotion-0:focus {
  cursor: pointer;
}

.emotion-0:disabled {
  cursor: not-allowed;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23304854' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

@media (min-width:31.25em) {
  .emotion-0 {
    width: auto;
  }
}

.emotion-0:disabled {
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 13 20' xmlns='http://www.w3.org/2000/svg' color='%23304854' class='css-uk6cul'%3e%3cpath d='M11.73 13L13 14.146 6.5 20 0 14.148 1.271 13l5.23 4.712L11.729 13zm0-6L6.5 2.288 1.272 7 0 5.852 6.5 0 13 5.854 11.73 7z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

<select
  className="emotion-0"
  disabled={true}
>
  <option
    value="eur"
  >
    EUR
  </option>
  <option
    value="usd"
  >
    USD
  </option>
  <option
    value="gbp"
  >
    GBP
  </option>
</select>
`;

exports[`Select renders as disabled for default select input 1`] = `
.emotion-0 {
  width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  color: #fff;
  background-color: transparent;
  border: 1px solid #415662;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 38px;
  background-position: right 0.625rem center;
  background-repeat: no-repeat;
  background-size: 0.625rem;
  color: #8697a2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: #304854;
}

.emotion-0:disabled,
.emotion-0:disabled + label {
  color: #304854;
}

.emotion-0:hover,
.emotion-0:focus {
  cursor: pointer;
}

.emotion-0:disabled {
  cursor: not-allowed;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23304854' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

@media (min-width:31.25em) {
  .emotion-0 {
    width: auto;
  }
}

<select
  className="emotion-0"
  disabled={true}
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="never-gonna"
  >
    Never gonna
  </option>
  <option
    value="give-you-up"
  >
    give you up
  </option>
  <option
    value="let-you-down"
  >
    let you down
  </option>
</select>
`;

exports[`Select renders as full-width for 'short' select input 1`] = `
.emotion-0 {
  width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  color: #fff;
  background-color: transparent;
  border: 1px solid #415662;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 38px;
  background-position: right 0.625rem center;
  background-repeat: no-repeat;
  background-size: 0.625rem;
  color: #8697a2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  color: white;
  background-size: auto 0.625rem;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 13 20' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M11.73 13L13 14.146 6.5 20 0 14.148 1.271 13l5.23 4.712L11.729 13zm0-6L6.5 2.288 1.272 7 0 5.852 6.5 0 13 5.854 11.73 7z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: #304854;
}

.emotion-0:disabled,
.emotion-0:disabled + label {
  color: #304854;
}

.emotion-0:hover,
.emotion-0:focus {
  cursor: pointer;
}

.emotion-0:disabled {
  cursor: not-allowed;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23304854' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

.emotion-0:disabled {
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 13 20' xmlns='http://www.w3.org/2000/svg' color='%23304854' class='css-uk6cul'%3e%3cpath d='M11.73 13L13 14.146 6.5 20 0 14.148 1.271 13l5.23 4.712L11.729 13zm0-6L6.5 2.288 1.272 7 0 5.852 6.5 0 13 5.854 11.73 7z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

<select
  className="emotion-0"
>
  <option
    value="eur"
  >
    EUR
  </option>
  <option
    value="usd"
  >
    USD
  </option>
  <option
    value="gbp"
  >
    GBP
  </option>
</select>
`;

exports[`Select renders as full-width for default select input 1`] = `
.emotion-0 {
  width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  color: #fff;
  background-color: transparent;
  border: 1px solid #415662;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 38px;
  background-position: right 0.625rem center;
  background-repeat: no-repeat;
  background-size: 0.625rem;
  color: #8697a2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: #304854;
}

.emotion-0:disabled,
.emotion-0:disabled + label {
  color: #304854;
}

.emotion-0:hover,
.emotion-0:focus {
  cursor: pointer;
}

.emotion-0:disabled {
  cursor: not-allowed;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23304854' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

<select
  className="emotion-0"
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="never-gonna"
  >
    Never gonna
  </option>
  <option
    value="give-you-up"
  >
    give you up
  </option>
  <option
    value="let-you-down"
  >
    let you down
  </option>
</select>
`;

exports[`Select renders with label above the input 1`] = `
.emotion-1 {
  width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  color: #fff;
  background-color: transparent;
  border: 1px solid #415662;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 38px;
  background-position: right 0.625rem center;
  background-repeat: no-repeat;
  background-size: 0.625rem;
  color: #8697a2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

.emotion-1:disabled {
  cursor: not-allowed;
  border-color: #304854;
}

.emotion-1:disabled,
.emotion-1:disabled + label {
  color: #304854;
}

.emotion-1:hover,
.emotion-1:focus {
  cursor: pointer;
}

.emotion-1:disabled {
  cursor: not-allowed;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23304854' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

@media (min-width:31.25em) {
  .emotion-1 {
    width: auto;
  }
}

.emotion-0 {
  display: block;
  margin-bottom: 0.25rem;
}

<label>
  <span
    className="emotion-0"
  >
    Example label
  </span>
  <select
    className="emotion-1"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="never-gonna"
    >
      Never gonna
    </option>
    <option
      value="give-you-up"
    >
      give you up
    </option>
    <option
      value="let-you-down"
    >
      let you down
    </option>
  </select>
</label>
`;

exports[`Select renders with label as a flex layout evenly spaced by default 1`] = `
.emotion-1 {
  width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  color: #fff;
  background-color: transparent;
  border: 1px solid #415662;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 38px;
  background-position: right 0.625rem center;
  background-repeat: no-repeat;
  background-size: 0.625rem;
  color: #8697a2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

.emotion-1:disabled {
  cursor: not-allowed;
  border-color: #304854;
}

.emotion-1:disabled,
.emotion-1:disabled + label {
  color: #304854;
}

.emotion-1:hover,
.emotion-1:focus {
  cursor: pointer;
}

.emotion-1:disabled {
  cursor: not-allowed;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23304854' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

@media (min-width:31.25em) {
  .emotion-1 {
    width: auto;
  }
}

@media (min-width:31.25em) {
  .emotion-2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .emotion-2 select,
  .emotion-2 input {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

.emotion-0 {
  display: block;
  margin-bottom: 0.25rem;
}

@media (min-width:31.25em) {
  .emotion-0 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    padding-right: 1rem;
    margin-bottom: 0;
  }
}

<label
  className="emotion-2"
>
  <span
    className="emotion-0"
  >
    Example label
  </span>
  <select
    className="emotion-1"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="never-gonna"
    >
      Never gonna
    </option>
    <option
      value="give-you-up"
    >
      give you up
    </option>
    <option
      value="let-you-down"
    >
      let you down
    </option>
  </select>
</label>
`;

exports[`Select renders with label as a flex layout with adjusted input size 1`] = `
.emotion-1 {
  width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  color: #fff;
  background-color: transparent;
  border: 1px solid #415662;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 38px;
  background-position: right 0.625rem center;
  background-repeat: no-repeat;
  background-size: 0.625rem;
  color: #8697a2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

.emotion-1:disabled {
  cursor: not-allowed;
  border-color: #304854;
}

.emotion-1:disabled,
.emotion-1:disabled + label {
  color: #304854;
}

.emotion-1:hover,
.emotion-1:focus {
  cursor: pointer;
}

.emotion-1:disabled {
  cursor: not-allowed;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23304854' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
}

@media (min-width:31.25em) {
  .emotion-1 {
    width: auto;
  }
}

.emotion-0 {
  display: block;
  margin-bottom: 0.25rem;
}

@media (min-width:31.25em) {
  .emotion-0 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    padding-right: 1rem;
    margin-bottom: 0;
  }
}

@media (min-width:31.25em) {
  .emotion-2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .emotion-2 select,
  .emotion-2 input {
    -webkit-flex: 2;
    -ms-flex: 2;
    flex: 2;
  }
}

<label
  className="emotion-2"
>
  <span
    className="emotion-0"
  >
    Example label
  </span>
  <select
    className="emotion-1"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="never-gonna"
    >
      Never gonna
    </option>
    <option
      value="give-you-up"
    >
      give you up
    </option>
    <option
      value="let-you-down"
    >
      let you down
    </option>
  </select>
</label>
`;
